add content block

--- a/index.html
+++ b/index.html
@@ -24,14 +24,57 @@
                     <li><a href="#">Portfolio</a></li>
                 </ul>
             </div>
-            <div class="login_icon"></div>
+            <div class="nav_login">
+                <a href="https://sakura0605o.github.io/loginpage/">
+                    <div class="login_icon"></div>
+                </a>
+            </div>
     </nav>
     <div class="banner">
-        <div class="banner_img">
-            <img src="img/background.png" alt="banner_img">
+        <div class="banner_img"><img src="img/background.png" alt="banner_img"></div>
+
+        <div class="banner_text1">
+            <p>WELLCOME TO</p>
         </div>
-        <div class="banner_text">
-            <p>Wellcome to TobyStudio</p>
+        <div class="banner_text2">
+            <p>TOBYSTUDIO</p>
+        </div>
+    </div>
+
+    <div class="item_concept item">
+        <div class="concept_tilte item_title">
+            <p>LOGO CONCEPT</p>
+        </div>
+        <div class="concept_formula item_content">
+            <div class="formula_name">
+                <p>TOBY</p>
+            </div>
+            <div class="formula_plus"></div>
+            <div class="formula_storm"></div>
+            <div class="formula_equal"></div>
+            <div class="formula_logo"><img src="img/toby5-horizon.png" alt=""></div>
+        </div>
+    </div>
+    <div class="item_meaning item">
+        <div class="meaning_title item_title">
+            <p>MEANING</p>
+        </div>
+        <div class="meaning_content item_content">
+            <p>AS POWERFUL AS THE STORM</p>
+        </div>
+    </div>
+    <div class="item_color item">
+        <div class="color_title item_title">
+            <p>COLOR</p>
+        </div>
+        <div class="color_content item_content">
+            <p>#29C8FF</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="copyright">
+            <h1>© 2024 TobyStudio65 Taiwan. All rights reserved.</h1>
         </div>
     </div>
 
