add menu action

--- a/index.html
+++ b/index.html
@@ -12,24 +12,23 @@
 </head>
 
 <body>
-    <nav>
-        <div class="nav">
-            <div class="option_icon"></div>
-            <div class="logo_img">
-                <a href=""><img src="img/toby5-word.png" alt=""></a>
-            </div>
-            <div class="option">
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                </ul>
-            </div>
-            <div class="nav_login">
-                <a href="https://sakura0605o.github.io/loginpage/">
-                    <div class="login_icon"></div>
-                </a>
-            </div>
-    </nav>
+    <header>        
+        <input type="checkbox" id="menu_control">
+        <label for="menu_control" class="menu_icon"></label>
+        <nav>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+            </ul>
+        </nav>
+        <div class="logo_img">
+            <a href=""><img src="img/toby5-word.png" alt=""></a>
+        </div>
+        <div class="nav_login">
+            <a href="https://sakura0605o.github.io/loginpage/">
+                <div class="login_icon"></div>
+            </a>
+    </header>
     <div class="banner">
         <div class="banner_img"><img src="img/background.png" alt="banner_img"></div>
 
