--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <label for="menu_control" class="menu_icon"></label>
         <nav>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
         <div class="logo_img">
@@ -30,7 +30,7 @@
             </a>
     </header>
     <div class="banner">
-        <div class="banner_img"><img src="img/background.png" alt="banner_img"></div>
+        <div class="banner_img"><img src="img/background-1.JPG" alt="banner_img"></div>
 
         <div class="banner_text1">
             <p>WELLCOME TO</p>
