modify nav link

--- a/about.html
+++ b/about.html
@@ -17,19 +17,19 @@
         <label for="menu_control" class="menu_icon"></label>
         <nav>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
         <div class="logo_img">
-            <a href=""><img src="img/toby5-word.png" alt=""></a>
+            <a href="index.html"><img src="img/toby5-word.png" alt=""></a>
         </div>
         <div class="nav_login">
             <a href="https://sakura0605o.github.io/loginpage/">
                 <div class="login_icon"></div>
             </a>
     </header>
-    
+
     <div class="about_block">
         <h1>About Me</h1>
         <div class="info_block">
