--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <div class="logo_img">
-            <a href=""><img src="img/toby5-word.png" alt=""></a>
+            <a href="index.html"><img src="img/toby5-word.png" alt=""></a>
         </div>
         <div class="nav_login">
             <a href="https://sakura0605o.github.io/loginpage/">
