--- a/about.html
+++ b/about.html
@@ -35,11 +35,47 @@
         <div class="info_block">
             <div class="info">
                 <div class="info_img"></div>
-                <div class="info_name"><p>Toby Xu</p></div>
+                <div class="info_name">
+                    <p>Toby Xu</p>
+                </div>
             </div>
-
-            <div class="info_title info_birthday">Name</div>
-            <div class="info_content info_birthday">Toby Xu</div>
+            <div class="info_title info_birthday">
+                <p>Birthday</p>
+            </div>
+            <div class="info_content info_birthday">2002.06.05</div>
+            <div class="info_title info_email">
+                <p>Email</p>
+            </div>
+            <div class="info_content info_email">tobystudio65@gmail.com</div>
+            <div class="info_title info_education">
+                <p>Education</p>
+            </div>
+            <div class="info_content info_education">
+                <p>Chihlee University of Technology
+                    department of information management</p>
+                <p class="info_date info_education">2020-2024</p>
+            </div>
+            <div class="info_title info_work">
+                <p>Work Experience</p>
+            </div>
+            <div class="info_content info_work">
+                <p>Yun yun AI Baby camera Co.,Ltd. <br>
+                    hardware intern</p>
+                <p class="info_date info_work">2023.09-</p>
+            </div>
+            <div class="info_title info_skill">
+                <p>Skill</p>
+            </div>
+            <div class="info_content info_skill">
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>JavaScript</li>
+                    <li>Vue</li>
+                    <li>Figma</li>
+                </ul>
+            </div>
         </div>
     </div>
     </div>
