add portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Tobystudio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>        
+    <header>
         <input type="checkbox" id="menu_control">
         <label for="menu_control" class="menu_icon"></label>
         <nav>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
         <div class="logo_img">
@@ -27,5 +29,58 @@
                 <div class="login_icon"></div>
             </a>
     </header>
+    <div class="article_block">
+        <h1>Portfolio</h1>
+        <div class="portfolio_block">
+            <a href="https://sakura0605o.github.io/creditcard/">
+                <div class="option_block option_block_1">
+                    <div class="option_block_filter">
+                        <div class="opt_img_block">
+                            <div class="opt_img opt_img_1"></div>
+                        </div>
+                        <div class="opt_content_block">
+                            <div class="opt_title">Calculator</div>
+                            <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+                                distinctio.</div>
+                        </div>
+                    </div>                    
+                </div>
+            </a>
+            <a href="https://sakura0605o.github.io/creditcard/">
+                <div class="option_block option_block_2">
+                    <div class="option_block_filter">
+                        <div class="opt_img_block">
+                            <div class="opt_img opt_img_2"></div>
+                        </div>
+                        <div class="opt_content_block">
+                            <div class="opt_title">Credit Card</div>
+                            <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+                                distinctio.</div>
+                        </div>
+                    </div>                    
+                </div>
+            </a>
+            <a href="https://sakura0605o.github.io/creditcard/">
+                <div class="option_block option_block_1">
+                    <div class="option_block_filter">
+                        <div class="opt_img_block">
+                            <div class="opt_img opt_img_1"></div>
+                        </div>
+                        <div class="opt_content_block">
+                            <div class="opt_title"></div>
+                            <div class="opt_describe"></div>
+                        </div>
+                    </div>                    
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="copyright">
+            <h1>© 2024 TobyStudio65 Taiwan. All rights reserved.</h1>
+        </div>
+    </div>
 </body>
+
 </html>
