--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             </a>
     </header>
 
-    <div class="about_block">
+    <div class="article_block about_block">
         <h1>About Me</h1>
         <div class="info_block">
             <div class="info">
