--- a/about.html
+++ b/about.html
@@ -81,6 +81,17 @@
     </div>
 
     <div class="footer">
+        <div class="footer_img"></div>
+        <div class="footer_menu">
+            <ul>
+                <a href="about.html">
+                    <li>About</li>
+                </a>
+                <a href="portfolio.html">
+                    <li>Portfolio</li>
+                </a>
+            </ul>
+        </div>
         <div class="copyright">
             <h1>© 2024 TobyStudio65 Taiwan. All rights reserved.</h1>
         </div>
