--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>        
+    <header>
         <input type="checkbox" id="menu_control">
         <label for="menu_control" class="menu_icon"></label>
         <nav>
@@ -72,6 +72,17 @@
     </div>
 
     <div class="footer">
+        <div class="footer_img"></div>
+        <div class="footer_menu">
+            <ul>
+                <a href="about.html">
+                    <li>About</li>
+                </a>
+                <a href="portfolio.html">
+                    <li>Portfolio</li>
+                </a>
+            </ul>
+        </div>
         <div class="copyright">
             <h1>© 2024 TobyStudio65 Taiwan. All rights reserved.</h1>
         </div>
