--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                     </div>                    
                 </div>
             </a>
-            <a href="https://sakura0605o.github.io/creditcard/">
+            <!-- <a href="https://sakura0605o.github.io/creditcard/">
                 <div class="option_block option_block_1">
                     <div class="option_block_filter">
                         <div class="opt_img_block">
@@ -72,11 +72,22 @@
                         </div>
                     </div>                    
                 </div>
-            </a>
+            </a> -->
         </div>
     </div>
 
     <div class="footer">
+        <div class="footer_img"></div>
+        <div class="footer_menu">
+            <ul>
+                <a href="about.html">
+                    <li>About</li>
+                </a>
+                <a href="portfolio.html">
+                    <li>Portfolio</li>
+                </a>
+            </ul>
+        </div>
         <div class="copyright">
             <h1>© 2024 TobyStudio65 Taiwan. All rights reserved.</h1>
         </div>
