--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             </a>
     </header>
     <div class="banner">
-        <div class="banner_img"><img src="img/background-1.JPG" alt="banner_img"></div>
-
+        <div class="banner_img"></div>
         <div class="banner_text1">
             <p>WELLCOME TO</p>
         </div>
@@ -41,7 +40,7 @@
     </div>
 
     <div class="item_concept item">
-        <div class="concept_tilte item_title">
+        <div class="concept_tite item_title">
             <p>LOGO CONCEPT</p>
         </div>
         <div class="concept_formula item_content">
@@ -50,8 +49,8 @@
             </div>
             <div class="formula_plus"></div>
             <div class="formula_storm"></div>
-            <div class="formula_equal"></div>
-            <div class="formula_logo"><img src="img/toby5-horizon.png" alt=""></div>
+            <div class="formula_equals"></div>
+            <div class="formula_logo"></div>
         </div>
     </div>
     <div class="item_meaning item">
@@ -67,7 +66,9 @@
             <p>COLOR</p>
         </div>
         <div class="color_content item_content">
-            <p>#29C8FF</p>
+            <div class="color_content_colornum">
+                <p>#29C8FF</p>
+            </div>            
         </div>
     </div>
 
