add mew portfolio

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <div class="formula_name">
                 <p>TOBY</p>
             </div>
-            <div class="formula_plus"></div>
+            <div class="formula_plus formula_icon"></div>
             <div class="formula_storm"></div>
-            <div class="formula_equals"></div>
+            <div class="formula_equals formula_icon"></div>
             <div class="formula_logo"></div>
         </div>
     </div>
