--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <input type="checkbox" id="menu_control">
-        <label for="menu_control" class="menu_icon"></label>        
+        <label for="menu_control" class="menu_icon"></label>
         <div class="logo_img">
             <a href="index.html"><img src="img/toby5-word.png" alt=""></a>
         </div>
@@ -30,6 +30,7 @@
             </a>
         </div>
     </header>
+
     <div class="banner">
         <div class="banner_img"></div>
         <div class="banner_text1">
@@ -69,24 +70,33 @@
         <div class="color_content item_content">
             <div class="color_content_colornum">
                 <p>#29C8FF</p>
-            </div>            
+            </div>
         </div>
     </div>
 
     <div class="footer">
-        <div class="footer_img"></div>
-        <div class="footer_menu">
-            <ul>
-                <a href="about.html">
-                    <li>About</li>
-                </a>
-                <a href="portfolio.html">
-                    <li>Portfolio</li>
-                </a>
-            </ul>
+        <div class="footer_nav">
+            <div class="footer_img"></div>
+            <div class="footer_menu">
+                <ul>
+                    <a href="about.html">
+                        <li>About</li>
+                    </a>
+                    <a href="portfolio.html">
+                        <li>Portfolio</li>
+                    </a>
+                </ul>
+            </div>
+            <div class="footer_contact">
+                <div class="contact_icon"></div>
+                <div class="contact_mail">
+                    <p>toby910605@gmail.com</p>
+                </div>
+            </div>
         </div>
+
         <div class="copyright">
-            <h1>© 2024 TobyStudio65 Taiwan. All rights reserved.</h1>
+            <p>© 2024 TobyStudio65 Taiwan. All rights reserved.<p>
         </div>
     </div>
 
