--- a/about.html
+++ b/about.html
@@ -82,19 +82,27 @@
     </div>
 
     <div class="footer">
-        <div class="footer_img"></div>
-        <div class="footer_menu">
-            <ul>
-                <a href="about.html">
-                    <li>About</li>
-                </a>
-                <a href="portfolio.html">
-                    <li>Portfolio</li>
-                </a>
-            </ul>
+        <div class="footer_nav">
+            <div class="footer_img"></div>
+            <div class="footer_menu">
+                <ul>
+                    <a href="about.html">
+                        <li>About</li>
+                    </a>
+                    <a href="portfolio.html">
+                        <li>Portfolio</li>
+                    </a>
+                </ul>
+            </div>
+            <div class="footer_contact">
+                <div class="contact_icon"></div>
+                <div class="contact_mail">
+                    <p>toby910605@gmail.com</p>
+                </div>
+            </div>
         </div>
         <div class="copyright">
-            <h1>© 2024 TobyStudio65 Taiwan. All rights reserved.</h1>
+            <p>© 2024 TobyStudio65 Taiwan. All rights reserved.<p>
         </div>
     </div>
 </body>
