--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,9 @@
     <div class="article_block">
         <h1>Portfolio</h1>
         <div class="portfolio_block">
+            <div class="portfolio_link">
+                
+            </div>
             <a href="https://sakura0605o.github.io/calculator">
                 <div class="option_block option_block_1">
                     <div class="option_block_filter">
