modify pofolio link img

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,54 +30,63 @@
             </a>
         </div>
     </header>
-    <div class="article_block">
+    <div class="article_block portfolio_block">
         <h1>Portfolio</h1>
-        <div class="portfolio_block">
-            <div class="portfolio_link">
-                
-            </div>
-            <a href="https://sakura0605o.github.io/calculator">
-                <div class="option_block option_block_1">
-                    <div class="option_block_filter">
-                        <div class="opt_img_block">
-                            <div class="opt_img opt_img_1"></div>
-                        </div>
-                        <div class="opt_content_block">
-                            <div class="opt_title">Calculator</div>
-                            <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
-                                distinctio.</div>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="https://sakura0605o.github.io/creditcard/">
-                <div class="option_block option_block_2">
-                    <div class="option_block_filter">
-                        <div class="opt_img_block">
-                            <div class="opt_img opt_img_2"></div>
-                        </div>
-                        <div class="opt_content_block">
-                            <div class="opt_title">Credit Card</div>
-                            <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
-                                distinctio.</div>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="https://sakura0605o.github.io/catering-system/">
-                <div class="option_block option_block_3">
-                    <div class="option_block_filter">
-                        <div class="opt_img_block">
-                            <div class="opt_img opt_img_3"></div>
-                        </div>
-                        <div class="opt_content_block">
-                            <div class="opt_title">Catering-system Exemple</div>
-                            <div class="opt_describe">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, sed!
+        <div class="link_block">
+            <div class="portfolio_link portfolio_link_1">
+                <div class="portfolio_link_filter">
+                    <a href="https://sakura0605o.github.io/calculator">
+                        <div class="option_block option_block_1">
+                            <div class="opt_img_block">
+                                <div class="opt_img opt_img_1"></div>
+                            </div>
+                            <div class="opt_content_block">
+                                <div class="opt_title">Calculator</div>
+                                <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Neque,
+                                    distinctio.</div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
-            </a>
+            </div>
+
+            <div class="portfolio_link portfolio_link_2">
+                <div class="portfolio_link_filter">
+                    <a href="https://sakura0605o.github.io/calculator">
+                        <div class="option_block option_block_2">
+                            <div class="opt_img_block">
+                                <div class="opt_img opt_img_2"></div>
+                            </div>
+                            <div class="opt_content_block">
+                                <div class="opt_title">Credit Card</div>
+                                <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Neque,
+                                    distinctio.</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="portfolio_link portfolio_link_3">
+                <div class="portfolio_link_filter">
+                    <a href="https://sakura0605o.github.io/calculator">
+                        <div class="option_block option_block_3">
+                            <div class="opt_img_block">
+                                <div class="opt_img opt_img_3"></div>
+                            </div>
+                            <div class="opt_content_block">
+                                <div class="opt_title">Catering System</div>
+                                <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Neque,
+                                    distinctio.</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
         </div>
     </div>
 
@@ -102,7 +111,8 @@
             </div>
         </div>
         <div class="copyright">
-            <p>© 2024 TobyStudio65 Taiwan. All rights reserved.<p>
+            <p>© 2024 TobyStudio65 Taiwan. All rights reserved.
+            <p>
         </div>
     </div>
 </body>
