modify about page and portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,7 @@
                             </div>
                             <div class="opt_content_block">
                                 <div class="opt_title">ANY Calculator</div>
-                                <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Neque,
-                                    distinctio.</div>
+                                <div class="opt_describe">Combined calculation, unit conversion and other multi-function calculator</div>
                             </div>
                         </div>
                     </a>
@@ -78,9 +76,7 @@
                             </div>
                             <div class="opt_content_block">
                                 <div class="opt_title">Catering System</div>
-                                <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Neque,
-                                    distinctio.</div>
+                                <div class="opt_describe">Ordering system designed for mobile use</div>
                             </div>
                         </div>
                     </a>
