modify info img

--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
         <div class="info_block">
             <div class="info_me">
                 <div class="info_img"></div>
+                <div class="info_c_name"><p>許家齊</p></div>
                 <div class="info_name">
                     <p>Toby Xu</p>
                 </div>
@@ -59,8 +60,8 @@
                     </div>
                     <div class="info_content edu_content">
                         <p>Chihlee University of Technology
-                            department of information management</p>
-                        <p class="info_date edu_date">2020-2024</p>
+                            department of <br>information management</p>
+                        <p class="info_date edu_date">2020.09-2024.06</p>
                     </div>
                 </div>
     
