--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                             </div>
                             <div class="opt_content_block">
                                 <div class="opt_title">ANY Calculator</div>
-                                <div class="opt_describe">Combined calculation, unit conversion and other multi-function calculator</div>
+                                <div class="opt_describe">Combined calculation, unit conversion and other multi-function calculator.</div>
                             </div>
                         </div>
                     </a>
@@ -58,9 +58,7 @@
                             </div>
                             <div class="opt_content_block">
                                 <div class="opt_title">Credit Card</div>
-                                <div class="opt_describe">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Neque,
-                                    distinctio.</div>
+                                <div class="opt_describe">Provide the most detailed and latest financial information.</div>
                             </div>
                         </div>
                     </a>
@@ -76,7 +74,7 @@
                             </div>
                             <div class="opt_content_block">
                                 <div class="opt_title">Catering System</div>
-                                <div class="opt_describe">Ordering system designed for mobile use</div>
+                                <div class="opt_describe">Ordering system designed for mobile use.</div>
                             </div>
                         </div>
                     </a>
