--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
 
-            <div class="portfolio_link portfolio_link_2">
+            <!-- <div class="portfolio_link portfolio_link_2">
                 <div class="portfolio_link_filter">
                     <a href="https://sakura0605o.github.io/creditcard/">
                         <div class="option_block option_block_2">
@@ -79,7 +79,7 @@
                         </div>
                     </a>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
