close portfolio page

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
             </ul>
         </nav>
         <div class="nav_login">
@@ -105,9 +105,9 @@
                     <a href="about.html">
                         <li>About</li>
                     </a>
-                    <a href="portfolio.html">
+                    <!-- <a href="portfolio.html">
                         <li>Portfolio</li>
-                    </a>
+                    </a> -->
                 </ul>
             </div>
             <div class="footer_contact">
