--- a/index.html
+++ b/index.html
@@ -1,115 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | TobyStudio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <input type="checkbox" id="menu_control">
-        <label for="menu_control" class="menu_icon"></label>
-        <div class="logo_img">
-            <a href="index.html"><img src="img/toby5-word.png" alt=""></a>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-        </nav>
-        <div class="nav_login">
-            <a href="https://sakura0605o.github.io/loginpage/">
-                <div class="login_icon"></div>
-            </a>
-        </div>
+      <input type="checkbox" id="menu_control" />
+      <label for="menu_control" class="menu_icon"></label>
+      <div class="logo_img">
+        <a href="index.html"><img src="img/toby5-word.png" alt="" /></a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
+        </ul>
+      </nav>
+      <div class="nav_login">
+        <a href="https://sakura0605o.github.io/loginpage/">
+          <div class="login_icon"></div>
+        </a>
+      </div>
     </header>
 
     <div class="banner">
-        <div class="banner_img"></div>
-        <div class="banner_text1">
-            <p>WELLCOME TO</p>
-        </div>
-        <div class="banner_text2">
-            <p>TOBYSTUDIO</p>
-        </div>
+      <div class="banner_img"></div>
+      <div class="banner_text1">
+        <p>WELLCOME TO</p>
+      </div>
+      <div class="banner_text2">
+        <p>TOBYSTUDIO</p>
+      </div>
     </div>
 
     <div class="item_concept item">
-        <div class="concept_title item_title">
-            <p>LOGO CONCEPT</p>
+      <div class="concept_title item_title">
+        <p>LOGO CONCEPT</p>
+      </div>
+      <div class="concept_formula item_content">
+        <div class="formula_name">
+          <p>TOBY</p>
         </div>
-        <div class="concept_formula item_content">
-            <div class="formula_name">
-                <p>TOBY</p>
-            </div>
-            <div class="formula_plus formula_icon"></div>
-            <div class="formula_storm"></div>
-            <div class="formula_equals formula_icon"></div>
-            <div class="formula_logo"></div>
-        </div>
+        <div class="formula_plus formula_icon"></div>
+        <div class="formula_storm"></div>
+        <div class="formula_equals formula_icon"></div>
+        <div class="formula_logo"></div>
+      </div>
     </div>
     <div class="item_meaning item">
-        <div class="meaning_title item_title">
-            <p>MEANING</p>
-        </div>
-        <div class="meaning_content item_content">
-            <p>AS POWERFUL AS THE STORM</p>
-        </div>
+      <div class="meaning_title item_title">
+        <p>MEANING</p>
+      </div>
+      <div class="meaning_content item_content">
+        <p>AS POWERFUL AS THE STORM</p>
+      </div>
     </div>
     <div class="item_color item">
-        <div class="color_title item_title">
-            <p>COLOR</p>
+      <div class="color_title item_title">
+        <p>COLOR</p>
+      </div>
+      <div class="color_content item_content">
+        <div class="color_content_colornum">
+          <p>#29C8FF</p>
         </div>
-        <div class="color_content item_content">
-            <div class="color_content_colornum">
-                <p>#29C8FF</p>
-            </div>
-        </div>
+      </div>
     </div>
 
     <div class="footer">
-        <div class="footer_nav">
-            <div class="footer_img"></div>
-            <div class="footer_menu">
-                <ul>
-                    <a href="about.html">
-                        <li>About</li>
-                    </a>
-                    <a href="portfolio.html">
+      <div class="footer_nav">
+        <div class="footer_img"></div>
+        <div class="footer_menu">
+          <ul>
+            <a href="about.html">
+              <li>About</li>
+            </a>
+            <!-- <a href="portfolio.html">
                         <li>Portfolio</li>
-                    </a>
-                </ul>
-            </div>
-            <div class="footer_contact">
-                <div class="contact_icon"></div>
-                <div class="contact_mail">
-                    <p>tobystudio65@gmail.com</p>
-                </div>
-            </div>
+                    </a> -->
+          </ul>
         </div>
-        <div class="copyright">
-            <p>© 2024 TobyStudio65 Taiwan. All rights reserved.<p>
+        <div class="footer_contact">
+          <div class="contact_icon"></div>
+          <div class="contact_mail">
+            <p>tobystudio65@gmail.com</p>
+          </div>
         </div>
+      </div>
+      <div class="copyright">
+        <p>© 2024 TobyStudio65 Taiwan. All rights reserved.</p>
+        <p></p>
+      </div>
     </div>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"
-        integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
-        integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"
+      integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+      integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
